config/openshift/mti-prod-td/deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: app-tester
  labels:
    app: app-tester
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-tester
  template:
    metadata:
      labels:
        app: app-tester
    spec:
      containers:
        - name: app-tester-container
          image: image-registry.openshift-image-registry.svc:5000/mti-prod-td/app-tester:latest
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 0
              memory: 0
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 10
